added Gemini google search support